@@ -1551,6 +1551,8 @@ Usage   : LOOK [ITEM NAME](.[NUM])\n\r\
 Example : look shelf\n\r\
 Example : look door\n\r\
 Example : look sword.2\n\r\
+Example : look book on shelf\n\r\
+Example : look key on chest\n\r\
 Example : look\n\r\
 Short(s): \n\r\
 Take a look at the item, mob, or other entity specified. \
